--- a/examples/sales_agent_with_context.ipynb
+++ b/examples/sales_agent_with_context.ipynb
@@ -5,22 +5,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SalesGPT - Your Context-Aware AI Sales Assistant With Knowledge Base\n",
+    "# SalesGPT - 基于上下文的 AI 销售助手与知识库\n",
     "\n",
-    "This notebook demonstrates an implementation of a **Context-Aware** AI Sales agent with a Product Knowledge Base. \n",
+    "这个笔记本演示了一个具有产品知识库的**基于上下文的** AI 销售代理的实现。\n",
     "\n",
-    "This notebook was originally published at [filipmichalsky/SalesGPT](https://github.com/filip-michalsky/SalesGPT) by [@FilipMichalsky](https://twitter.com/FilipMichalsky).\n",
+    "这个笔记本最初发布在 [filipmichalsky/SalesGPT](https://github.com/filip-michalsky/SalesGPT) 由 [@FilipMichalsky](https://twitter.com/FilipMichalsky) 创建。\n",
     "\n",
-    "SalesGPT is context-aware, which means it can understand what section of a sales conversation it is in and act accordingly.\n",
-    " \n",
-    "As such, this agent can have a natural sales conversation with a prospect and behaves based on the conversation stage. Hence, this notebook demonstrates how we can use AI to automate sales development representatives activites, such as outbound sales calls. \n",
+    "SalesGPT 是基于上下文的，这意味着它可以理解销售对话的哪个部分，并根据情境进行行动。\n",
     "\n",
-    "Additionally, the AI Sales agent has access to tools, which allow it to interact with other systems.\n",
+    "因此，这个代理可以与潜在客户进行自然的销售对话，并根据对话阶段的不同表现出不同的行为。因此，这个笔记本演示了如何使用人工智能来自动化销售发展代表的活动，例如外呼销售电话。\n",
     "\n",
-    "Here, we show how the AI Sales Agent can use a **Product Knowledge Base** to speak about a particular's company offerings,\n",
-    "hence increasing relevance and reducing hallucinations.\n",
+    "此外，AI 销售代理可以使用工具，从而使其能够与其他系统进行交互。\n",
     "\n",
-    "We leverage the [`langchain`](https://github.com/hwchase17/langchain) library in this implementation, specifically [Custom Agent Configuration](https://langchain-langchain.vercel.app/docs/modules/agents/how_to/custom_agent_with_tool_retrieval) and are inspired by [BabyAGI](https://github.com/yoheinakajima/babyagi) architecture ."
+    "在这里，我们展示了 AI 销售代理如何使用**产品知识库**来介绍特定公司的产品，从而增加相关性并减少虚构。\n",
+    "\n",
+    "在这个实现中，我们利用了 [`langchain`](https://github.com/hwchase17/langchain) 库，具体来说是[自定义代理配置](https://langchain-langchain.vercel.app/docs/modules/agents/how_to/custom_agent_with_tool_retrieval)，并受到 [BabyAGI](https://github.com/yoheinakajima/babyagi) 架构的启发。"
    ]
   },
   {
@@ -43,10 +42,10 @@
     "# you need to put it in your .env file \n",
     "# OPENAI_API_KEY='sk-xxxx'\n",
     "\n",
-    "with open('.env','r') as f:\n",
-    "    env_file = f.readlines()\n",
-    "envs_dict = {key.strip(\"'\"):value.strip('\\n') for key, value in [(i.split('=')) for i in env_file]}\n",
-    "os.environ['OPENAI_API_KEY'] = envs_dict['OPENAI_API_KEY']\n",
+    "# with open('.env','r') as f:\n",
+    "#     env_file = f.readlines()\n",
+    "# envs_dict = {key.strip(\"'\"):value.strip('\\n') for key, value in [(i.split('=')) for i in env_file]}\n",
+    "# os.environ['OPENAI_API_KEY'] = envs_dict['OPENAI_API_KEY']\n",
     "\n",
     "from typing import Dict, List, Any\n",
     "\n",
@@ -66,7 +65,12 @@
     "from langchain.agents.agent import AgentOutputParser\n",
     "from langchain.agents.conversational.prompt import FORMAT_INSTRUCTIONS\n",
     "from langchain.schema import AgentAction, AgentFinish \n",
-    "from typing import Union\n"
+    "from typing import Union\n",
+    "os.environ[\"OPENAI_API_TYPE\"] = \"azure\"\n",
+    "os.environ[\"OPENAI_API_BASE\"] = \"https://minisoopenai.openai.azure.com/\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"2719d64195484f14a3694f4259eae035\"\n",
+    "\n",
+    "llm = ChatOpenAI(temperature=0, model_kwargs={'engine':\"minisoGPT3-5\"})"
    ]
   },
   {
@@ -253,7 +257,7 @@
    "source": [
     "# test the intermediate chains\n",
     "verbose=True\n",
-    "llm = ChatOpenAI(temperature=0.9)\n",
+    "# llm = ChatOpenAI(temperature=0.9)\n",
     "\n",
     "stage_analyzer_chain = StageAnalyzerChain.from_llm(llm, verbose=verbose)\n",
     "\n",
@@ -272,7 +276,7 @@
      "text": [
       "\n",
       "\n",
-      "\u001b[1m> Entering new  chain...\u001b[0m\n",
+      "\u001b[1m> Entering new StageAnalyzerChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3mYou are a sales assistant helping your sales agent to determine which stage of a sales conversation should the agent move to, or stay at.\n",
       "            Following '===' is the conversation history. \n",
@@ -294,7 +298,13 @@
       "            Only answer with a number between 1 through 7 with a best guess of what stage should the conversation continue with. \n",
       "            The answer needs to be one number only, no words.\n",
       "            If there is no conversation history, output 1.\n",
-      "            Do not answer anything else nor add anything to you answer.\u001b[0m\n",
+      "            Do not answer anything else nor add anything to you answer.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -325,7 +335,7 @@
      "text": [
       "\n",
       "\n",
-      "\u001b[1m> Entering new  chain...\u001b[0m\n",
+      "\u001b[1m> Entering new SalesConversationChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3mNever forget your name is Ted Lasso. You work as a Business Development Representative.\n",
       "        You work at company named Sleep Haven. Sleep Haven's business is the following: Sleep Haven is a premium mattress company that provides customers with the most comfortable and supportive sleeping experience possible. We offer a range of high-quality mattresses, pillows, and bedding accessories that are designed to meet the unique needs of our customers.\n",
@@ -358,7 +368,7 @@
     {
      "data": {
       "text/plain": [
-       "\"I'm doing great, thank you for asking! I'm excited to speak with you today about how Sleep Haven can help you achieve a better night's sleep. Are you currently looking for a premium mattress to improve your sleep quality? <END_OF_TURN>\""
+       "\"I'm doing great, thank you for asking. The reason for my call today is to see if you're interested in improving your sleep with one of our premium mattresses. Would you be open to discussing this further? <END_OF_TURN>\""
       ]
      },
      "execution_count": 7,
@@ -434,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,12 +456,19 @@
     "    # load product catalog\n",
     "    with open(product_catalog, \"r\") as f:\n",
     "        product_catalog = f.read()\n",
+    "    os.environ[\"OPENAI_API_TYPE\"] = \"azure\"\n",
+    "    os.environ[\"OPENAI_API_BASE\"] = \"https://minisoopenai.openai.azure.com/\"\n",
+    "    os.environ[\"OPENAI_API_KEY\"] = \"2719d64195484f14a3694f4259eae035\"\n",
     "\n",
+    "    llm = ChatOpenAI(temperature=0, model_kwargs={'engine':\"minisoGPT3-5\"})\n",
     "    text_splitter = CharacterTextSplitter(chunk_size=10, chunk_overlap=0)\n",
     "    texts = text_splitter.split_text(product_catalog)\n",
     "\n",
-    "    llm = OpenAI(temperature=0)\n",
-    "    embeddings = OpenAIEmbeddings()\n",
+    "    # llm = OpenAI(temperature=0)\n",
+    "    # embeddings = OpenAIEmbeddings()\n",
+    "    embeddings = OpenAIEmbeddings(\n",
+    "    deployment=\"embedding-2\"\n",
+    ")\n",
     "    docsearch = Chroma.from_texts(\n",
     "        texts, embeddings, collection_name=\"product-knowledge-base\"\n",
     "    )\n",
@@ -481,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -496,10 +513,10 @@
     {
      "data": {
       "text/plain": [
-       "' We have four products available: the Classic Harmony Spring Mattress, the Plush Serenity Bamboo Mattress, the Luxury Cloud-Comfort Memory Foam Mattress, and the EcoGreen Hybrid Latex Mattress. Each product is available in different sizes, with the Classic Harmony Spring Mattress available in Queen and King sizes, the Plush Serenity Bamboo Mattress available in King size, the Luxury Cloud-Comfort Memory Foam Mattress available in Twin, Queen, and King sizes, and the EcoGreen Hybrid Latex Mattress available in Twin and Full sizes.'"
+       "'We have four products available: \\n1. Luxury Cloud-Comfort Memory Foam Mattress \\n2. Classic Harmony Spring Mattress \\n3. EcoGreen Hybrid Latex Mattress \\n4. Plush Serenity Bamboo Mattress. \\n\\nEach product has different sizes available and unique features to suit your sleeping needs.'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,12 +531,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set up the SalesGPT Controller with the Sales Agent and Stage Analyzer and a Knowledge Base"
+    "### 使用销售代理、阶段分析器和知识库设置 SalesGPT 控制器\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -938,14 +955,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ted Lasso:  Hello there! My name is Ted Lasso, and I'm calling from Sleep Haven. How are you doing today?\n"
+      "Ted Lasso:  Hello there! This is Ted Lasso from Sleep Haven. How are you doing today?\n"
      ]
     }
    ],
@@ -955,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,14 +981,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conversation Stage: Needs analysis: Ask open-ended questions to uncover the prospect's needs and pain points. Listen carefully to their responses and take notes.\n"
+      "Conversation Stage: Value proposition: Briefly explain how your product/service can benefit the prospect. Focus on the unique selling points and value proposition of your product/service that sets it apart from competitors.\n"
      ]
     }
    ],
